# firesynth

./: .gitignore  CMakeLists.txt  README.md  run.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: Oscillator.h  PadEngine.cpp  PadEngine.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h  VoiceFX.cpp  VoiceFX.h
Source/ui/: FxPadComponent.h  PadComponent.h  SynthLookAndFeel.h  WheelComponent.h
